--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.8</version>
 		</dependency>
+		<dependency>
+			<groupId>fr.inria.gforge.spoon.labs</groupId>
+			<artifactId>gumtree-spoon-ast-diff</artifactId>
+			<version>1.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
